[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-pydantic-ai"
version = "0.1.1"
description = "Drop-in Tessera integration for Pydantic AI. One line of config routes your Pydantic AI Agent's LLM calls through Tessera's auto-route + auto-cache + auto-compress + auto-batch proxy. Free 60M tokens/mo. Production: 20% of measured savings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tessera (Fintechagency OÜ)", email = "contact@tesseraai.io" }
]
keywords = [
  "tessera",
  "pydantic-ai",
  "pydantic",
  "agent-framework",
  "llm",
  "openai",
  "anthropic",
  "cost-optimization",
  "ai-cost",
  "llm-cost",
  "llm-proxy",
  "gpt-4o",
  "claude",
  "typed-python",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://tesseraai.io"
Documentation = "https://tesseraai.io/dev"
Repository = "https://github.com/tessera-llm/tessera-pydantic-ai"
Issues = "https://github.com/tessera-llm/tessera-pydantic-ai/issues"
Changelog = "https://github.com/tessera-llm/tessera-pydantic-ai/blob/main/CHANGELOG.md"
"Main SDK" = "https://github.com/tessera-llm/tessera-sdk"
"LangChain integration" = "https://github.com/tessera-llm/tessera-langchain"
"LlamaIndex integration" = "https://github.com/tessera-llm/tessera-llamaindex"
"Vercel AI SDK integration" = "https://github.com/tessera-llm/tessera-vercel-ai"
"Mastra integration" = "https://github.com/tessera-llm/tessera-mastra"

[tool.hatch.build.targets.wheel]
packages = ["tessera_pydantic_ai"]
include = ["tessera_pydantic_ai/py.typed"]
